--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -571,9 +571,6 @@ video {
 .mt-32{
 	margin-top: 8rem;
 }
-.mt-2{
-	margin-top: 0.5rem;
-}
 .-mt-64{
 	margin-top: -16rem;
 }
@@ -591,9 +588,6 @@ video {
 }
 .block{
 	display: block;
-}
-.inline-block{
-	display: inline-block;
 }
 .flex{
 	display: flex;
@@ -802,9 +796,6 @@ video {
 }
 .pb-6{
 	padding-bottom: 1.5rem;
-}
-.pb-2{
-	padding-bottom: 0.5rem;
 }
 .pb-20{
 	padding-bottom: 5rem;
@@ -2418,6 +2409,26 @@ video {
 .lg\:justify-start{justify-content:flex-start}
 .lg\:px-36{padding-left:9rem;padding-right:9rem}
 .lg\:text-left{text-align:left}}
+.form-check {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 30px auto;
+}
+.btn-arriendo button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.registro {
+    display: flex;
+    flex-direction: row;
+    
+}
+.bg-landing-background{
+	background-image: linear-gradient(rgba(0, 0, 0, 0.562), rgba(0, 0, 0, 0.644)), url(https://helpx.adobe.com/content/dam/help/en/photoshop/using/convert-color-image-black-white/jcr_content/main-pars/before_and_after/image-before/Landscape-Color.jpg);
+}
 @media (min-width: 768px){
 	.md\:w-4\/12{
 		width: 33.333333%;
@@ -2447,9 +2458,6 @@ video {
 	}
 	.lg\:mt-0{
 		margin-top: 0px;
-	}
-	.lg\:mr-4{
-		margin-right: 1rem;
 	}
 	.lg\:w-3\/12{
 		width: 25%;
@@ -2488,3 +2496,4 @@ video {
 		padding-top: 1rem;
 	}
 }
+
